# mothy

./: .env_template  .gitignore  Cargo.toml  README.md  fetch_moth_data.sh  start_postgres_server.sh  upgrade_postgres_notes.txt
assets/: scores_data.json.zst
assets/emojis/: render_svgs.sh
migrations/: 20250801162443_init.sql
mothy_ansi/: Cargo.toml
mothy_commands/: Cargo.toml
mothy_commands/src/: fun.rs  lib.rs  meta.rs
mothy_commands/src/fun/: hug.rs  james_score.rs  mod.rs
mothy_commands/src/management/: guilds.rs  mod.rs
mothy_commands/src/moths/: api_callers.rs  embed_assemblers.rs  helpers.rs  interaction_helpers.rs  mod.rs  moth.rs
mothy_commands/src/utility/: avatar.rs  colour.rs  info.rs  mod.rs  patch_fix.rs  random.rs  udev.rs  urban.rs
mothy_core/: Cargo.toml
mothy_core/src/: database.rs  database_models.rs  error.rs  lib.rs  moth_data.rs  regex_filters.rs  regex_filters.txt  regex_link_filters.txt  score_data.rs  structs.rs  zstd.rs
mothy_data/: Cargo.toml
mothy_events/: Cargo.toml
mothy_events/src/: helper.rs  lib.rs
mothy_events/src/join_leave/: mod.rs
mothy_events/src/messages/: mod.rs
mothy_events/src/voice/: mod.rs
src/: main.rs
src/commands/: meta.rs
src/commands/utility/: colour.rs  roll.rs  urban.rs
