[package]
name = "mothy"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["mothy_commands", "mothy_core", "mothy_events"]


[dependencies]
mothy_core = { path = "mothy_core" }
mothy_commands = { version = "0.1.0", path = "mothy_commands" }
mothy_events = { version = "0.1.0", path = "mothy_events" }

tokio.workspace = true
poise.workspace = true
serenity.workspace = true
dotenvy = "0.15.7"

[workspace.dependencies]
sqlx = { version = "0.8", features = ["macros", "runtime-tokio-rustls", "postgres", "time"] }
tokio = { version = "1.29", features = ["macros", "signal", "rt-multi-thread"] }
to-arraystring = "0.2"
serde_json = "1"
serde = "1"
dashmap = "6"
arrayvec = "0.7"
anyhow = "1"
chrono = "0.4"


[workspace.dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
#path = "../serenity"
features = ["temp_cache"]
default-features = false
branch = "next"

[patch.'https://github.com/serenity-rs/serenity']
serenity = { git = 'https://github.com/jamesbt365/serenity', branch = 'components-v2-withtag-gradient-nameplates/decor-resolved' }

[workspace.dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"
