[package]
name = "mothy_commands"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
mothy_core = { version = "0.1.0", path = "../mothy_core" }
poise.workspace = true
rand = "0.9.2"
reqwest = "0.12.22"
serde.workspace = true
serde_json.workspace = true
serenity.workspace = true
to-arraystring.workspace = true
regex.workspace = true
moth_filter.workspace = true
